--- a/public/global.css
+++ b/public/global.css
@@ -2,4 +2,5 @@ html, body {
 	padding: 0;
 	margin: 0;
 	scroll-behavior: smooth;
+	background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
 }
